--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,6 +11,8 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-spinners": "^0.7.2",
+    "react-spinners-kit": "^1.9.1",
     "redux": "^4.0.4"
   },
   "scripts": {
